force-app/main/default/objects/PriceApprovalRequest__c/PriceApprovalRequest__c.object-meta.xml
<CustomObject>
    <label>Price Approval Request</label>
    <nameField>
        <label>Doc. Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Approval Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>