force-app/main/default/objects/PriceApprovalRequest__c/fields/ApprovalMode__c.field-meta.xml
<CustomField>
    <fullName>ApprovalMode__c</fullName>
    <label>Approval Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Only this step</label>
            </value>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>Final approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>