force-app/main/default/objects/PriceApprovalRequest__c/fields/ApprovalResolution__c.field-meta.xml
<CustomField>
    <fullName>ApprovalResolution__c</fullName>
    <description>This field is updated automatically after approval step result and handled by PAR object triggers.</description>
    <label>Approval Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SalesRep:0</fullName>
            </value>
            <value>
                <fullName>SalesRep:1</fullName>
            </value>
            <value>
                <fullName>SalesRep:-1</fullName>
            </value>
            <value>
                <fullName>PRMDirector:0</fullName>
            </value>
            <value>
                <fullName>PRMDirector:1</fullName>
            </value>
            <value>
                <fullName>PRMDirector:-1</fullName>
            </value>
            <value>
                <fullName>CEO:0</fullName>
            </value>
            <value>
                <fullName>CEO:1</fullName>
            </value>
            <value>
                <fullName>CEO:-1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>