force-app/main/default/objects/PriceApprovalRequest__c/fields/BilletCost__c.field-meta.xml
<CustomField>
    <fullName>BilletCost__c</fullName>
    <label>Total Billet Cost (USD)</label>
    <summarizedField>PriceApprovalRequestItem__c.BilletCost__c</summarizedField>
    <summaryForeignKey>PriceApprovalRequestItem__c.PriceApprovalRequestId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>