force-app/main/default/objects/PriceApprovalRequest__c/fields/BilletCost_t__c.field-meta.xml
<CustomField>
    <fullName>BilletCost_t__c</fullName>
    <formula>BilletCost__c /  Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billet Cost / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>