force-app/main/default/objects/PriceApprovalRequest__c/fields/BOSpecialist__c.field-meta.xml
<CustomField>
    <fullName>BOSpecialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Back office specialist</inlineHelpText>
    <label>BO Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PriceApprovalRequests_BOS</relationshipName>
    <type>Lookup</type>
</CustomField>