force-app/main/default/objects/PriceApprovalRequest__c/fields/CoatingCost__c.field-meta.xml
<CustomField>
    <fullName>CoatingCost__c</fullName>
    <label>Total Coating Cost (USD)</label>
    <summarizedField>PriceApprovalRequestItem__c.CoatingCost__c</summarizedField>
    <summaryForeignKey>PriceApprovalRequestItem__c.PriceApprovalRequestId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>