force-app/main/default/objects/PriceApprovalRequest__c/fields/CoatingCost_t__c.field-meta.xml
<CustomField>
    <fullName>CoatingCost_t__c</fullName>
    <formula>CoatingCost__c /  Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coating Cost / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>