force-app/main/default/objects/PriceApprovalRequest__c/fields/CostsTKB__c.field-meta.xml
<CustomField>
    <fullName>CostsTKB__c</fullName>
    <label>Total Costs TKB (USD)</label>
    <summarizedField>PriceApprovalRequestItem__c.CostsTKB__c</summarizedField>
    <summaryForeignKey>PriceApprovalRequestItem__c.PriceApprovalRequestId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>