force-app/main/default/objects/PriceApprovalRequest__c/fields/CostsTKB_t__c.field-meta.xml
<CustomField>
    <fullName>CostsTKB_t__c</fullName>
    <formula>CostsTKB__c /  Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costs TKB / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>