force-app/main/default/objects/PriceApprovalRequest__c/fields/CurrentApprover__c.field-meta.xml
<CustomField>
    <fullName>CurrentApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service field that is used to determine who is the current approver</description>
    <label>Current Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Price_Approval_Requests_CurrentApprover</relationshipName>
    <type>Lookup</type>
</CustomField>