force-app/main/default/objects/PriceApprovalRequest__c/fields/CustomDuty__c.field-meta.xml
<CustomField>
    <fullName>CustomDuty__c</fullName>
    <label>Total Custom Duty (USD)</label>
    <summarizedField>PriceApprovalRequestItem__c.CustomDuty__c</summarizedField>
    <summaryForeignKey>PriceApprovalRequestItem__c.PriceApprovalRequestId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>