force-app/main/default/objects/PriceApprovalRequest__c/fields/CustomDuty_t__c.field-meta.xml
<CustomField>
    <fullName>CustomDuty_t__c</fullName>
    <formula>CustomDuty__c /  Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Duty / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>