force-app/main/default/objects/PriceApprovalRequest__c/fields/DeliveryTerms__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTerms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Terms</label>
    <referenceTo>DeliveryTerms__c</referenceTo>
    <relationshipLabel>Price Approval Requests</relationshipLabel>
    <relationshipName>Price_Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>