force-app/main/default/objects/PriceApprovalRequest__c/fields/DocDate__c.field-meta.xml
<CustomField>
    <fullName>DocDate__c</fullName>
    <label>Doc. Date</label>
    <type>Date</type>
</CustomField>