force-app/main/default/objects/PriceApprovalRequest__c/fields/DocNumber__c.field-meta.xml
<CustomField>
    <fullName>DocNumber__c</fullName>
    <externalId>true</externalId>
    <label>Doc. Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>