force-app/main/default/objects/PriceApprovalRequest__c/fields/ExtraCosts__c.field-meta.xml
<CustomField>
    <fullName>ExtraCosts__c</fullName>
    <label>Total Extra Costs (USD)</label>
    <summarizedField>PriceApprovalRequestItem__c.ExtraCosts__c</summarizedField>
    <summaryForeignKey>PriceApprovalRequestItem__c.PriceApprovalRequestId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>