force-app/main/default/objects/PriceApprovalRequest__c/fields/ExtraCosts_t__c.field-meta.xml
<CustomField>
    <fullName>ExtraCosts_t__c</fullName>
    <formula>ExtraCosts__c /  Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extra Costs / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>