force-app/main/default/objects/PriceApprovalRequest__c/fields/FED__c.field-meta.xml
<CustomField>
    <fullName>FED__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Financial-Economic Department resolution retrieved</description>
    <inlineHelpText>Is Financial-Economic Department resolution retrieved</inlineHelpText>
    <label>FED Resolution</label>
    <type>Checkbox</type>
</CustomField>