force-app/main/default/objects/PriceApprovalRequest__c/fields/IsPriceModel__c.field-meta.xml
<CustomField>
    <fullName>IsPriceModel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Model</label>
    <type>Checkbox</type>
</CustomField>