force-app/main/default/objects/PriceApprovalRequest__c/fields/LastAttemptDate__c.field-meta.xml
<CustomField>
    <fullName>LastAttemptDate__c</fullName>
    <label>LastAttemptDate</label>
    <type>DateTime</type>
</CustomField>