force-app/main/default/objects/PriceApprovalRequest__c/fields/LastErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>LastErrorMessage__c</fullName>
    <label>LastErrorMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>