force-app/main/default/objects/PriceApprovalRequest__c/fields/Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Liabilities__c</fullName>
    <label>Total Liabilities (USD)</label>
    <summarizedField>PriceApprovalRequestItem__c.Liabilities__c</summarizedField>
    <summaryForeignKey>PriceApprovalRequestItem__c.PriceApprovalRequestId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>