force-app/main/default/objects/PriceApprovalRequest__c/fields/Liabilities_t__c.field-meta.xml
<CustomField>
    <fullName>Liabilities_t__c</fullName>
    <formula>Liabilities__c /  Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Commission fees</inlineHelpText>
    <label>Liabilities / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>