force-app/main/default/objects/PriceApprovalRequest__c/fields/MarginTKB__c.field-meta.xml
<CustomField>
    <fullName>MarginTKB__c</fullName>
    <label>Total Margin TKB (USD)</label>
    <summarizedField>PriceApprovalRequestItem__c.MarginTKB__c</summarizedField>
    <summaryForeignKey>PriceApprovalRequestItem__c.PriceApprovalRequestId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>