force-app/main/default/objects/PriceApprovalRequest__c/fields/MetalPrice_t__c.field-meta.xml
<CustomField>
    <fullName>MetalPrice_t__c</fullName>
    <formula>TotalMetalPrice__c /  Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Metal Price / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>