force-app/main/default/objects/PriceApprovalRequest__c/fields/NeedsCEOApproval__c.field-meta.xml
<CustomField>
    <fullName>NeedsCEOApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs CEO Approval</label>
    <type>Checkbox</type>
</CustomField>