force-app/main/default/objects/PriceApprovalRequest__c/fields/NeedsPRDDirectorApproval__c.field-meta.xml
<CustomField>
    <fullName>NeedsPRDDirectorApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs PRD Director Approval</label>
    <type>Checkbox</type>
</CustomField>