force-app/main/default/objects/PriceApprovalRequest__c/fields/NeedsSalesManagerApproval__c.field-meta.xml
<CustomField>
    <fullName>NeedsSalesManagerApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An indicator, saying that a PAR needs to be approved by Sales Manager after Sales Rep has confirmed it</description>
    <label>Needs Sales Manager Approval</label>
    <type>Checkbox</type>
</CustomField>