force-app/main/default/objects/PriceApprovalRequest__c/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Terms</label>
    <referenceTo>PaymentTerms__c</referenceTo>
    <relationshipLabel>Price Approval Requests</relationshipLabel>
    <relationshipName>PriceApprovalRequests</relationshipName>
    <type>Lookup</type>
</CustomField>