force-app/main/default/objects/PriceApprovalRequest__c/fields/Price_t__c.field-meta.xml
<CustomField>
    <fullName>Price_t__c</fullName>
    <formula>Revenue__c /  Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price (per t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>