force-app/main/default/objects/PriceApprovalRequest__c/fields/PriceEXW_t__c.field-meta.xml
<CustomField>
    <fullName>PriceEXW_t__c</fullName>
    <formula>TotalPriceEXW__c /  Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price EXW / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>