force-app/main/default/objects/PriceApprovalRequest__c/fields/PRMDirector__c.field-meta.xml
<CustomField>
    <fullName>PRMDirector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product and Resource Management Director</description>
    <inlineHelpText>Product and Resource Management Director</inlineHelpText>
    <label>Prod &amp; Resr Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PriceApprovalRequests_PRM</relationshipName>
    <type>Lookup</type>
</CustomField>