force-app/main/default/objects/PriceApprovalRequest__c/fields/Quantity_t__c.field-meta.xml
<CustomField>
    <fullName>Quantity_t__c</fullName>
    <label>Total Quantity (t)</label>
    <summarizedField>PriceApprovalRequestItem__c.Quantity_t__c</summarizedField>
    <summaryForeignKey>PriceApprovalRequestItem__c.PriceApprovalRequestId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>