force-app/main/default/objects/PriceApprovalRequest__c/fields/RetryCount__c.field-meta.xml
<CustomField>
    <fullName>RetryCount__c</fullName>
    <label>RetryCount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>