force-app/main/default/objects/PriceApprovalRequest__c/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <description>Weighted average ROI.</description>
    <formula>ROI_Absolute__c /  Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Weighted average ROI.</inlineHelpText>
    <label>ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>