force-app/main/default/objects/PriceApprovalRequest__c/fields/ROI_Absolute__c.field-meta.xml
<CustomField>
    <fullName>ROI_Absolute__c</fullName>
    <description>Service auxiliary field for calculating total ROI.</description>
    <label>Total ROI (Absolute)</label>
    <summarizedField>PriceApprovalRequestItem__c.ROI_Abs__c</summarizedField>
    <summaryForeignKey>PriceApprovalRequestItem__c.PriceApprovalRequestId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>