force-app/main/default/objects/PriceApprovalRequest__c/fields/SalesRep__c.field-meta.xml
<CustomField>
    <fullName>SalesRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sales representative</inlineHelpText>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PriceApprovalRequests</relationshipName>
    <type>Lookup</type>
</CustomField>