force-app/main/default/objects/PriceApprovalRequest__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Needs Confirmation</fullName>
                <label>Sales Rep Confirmation</label>
            </value>
            <value>
                <fullName>Costing</fullName>
            </value>
            <value>
                <fullName>PRD</fullName>
                <label>Prod &amp; Resr dept</label>
            </value>
            <value>
                <fullName>In Review</fullName>
                <label>Additional Review</label>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>