force-app/main/default/objects/PriceApprovalRequest__c/fields/StageERP__c.field-meta.xml
<CustomField>
    <fullName>StageERP__c</fullName>
    <description>PAR stage in It-Enterprise.</description>
    <inlineHelpText>PAR stage in It-Enterprise system.</inlineHelpText>
    <label>Stage in ERP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PAR_Stages</valueSetName>
    </valueSet>
</CustomField>