force-app/main/default/objects/PriceApprovalRequest__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <label>Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>