force-app/main/default/objects/PriceApprovalRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>-1</fullName>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>