force-app/main/default/objects/PriceApprovalRequest__c/fields/TotalMetalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalMetalPrice__c</fullName>
    <label>Total Metal Price (USD)</label>
    <summarizedField>PriceApprovalRequestItem__c.TotalMetalPrice__c</summarizedField>
    <summaryForeignKey>PriceApprovalRequestItem__c.PriceApprovalRequestId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>