force-app/main/default/objects/PriceApprovalRequest__c/fields/TotalPriceEXW__c.field-meta.xml
<CustomField>
    <fullName>TotalPriceEXW__c</fullName>
    <label>Total Price EXW (USD)</label>
    <summarizedField>PriceApprovalRequestItem__c.TotalPriceEXW__c</summarizedField>
    <summaryForeignKey>PriceApprovalRequestItem__c.PriceApprovalRequestId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>