force-app/main/default/objects/PriceApprovalRequest__c/fields/Transportation__c.field-meta.xml
<CustomField>
    <fullName>Transportation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the transportation cost calculated by Logistic Department</description>
    <inlineHelpText>Is the transportation cost calculated by Logistic Department</inlineHelpText>
    <label>Transportation Cost</label>
    <type>Checkbox</type>
</CustomField>