force-app/main/default/objects/PriceApprovalRequest__c/fields/TransportationCost__c.field-meta.xml
<CustomField>
    <fullName>TransportationCost__c</fullName>
    <description>Total transportation cost in USD.</description>
    <inlineHelpText>Total transportation cost in USD.</inlineHelpText>
    <label>Total Transp. Cost (USD)</label>
    <summarizedField>PriceApprovalRequestItem__c.TransportationCost__c</summarizedField>
    <summaryForeignKey>PriceApprovalRequestItem__c.PriceApprovalRequestId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>