force-app/main/default/objects/PriceApprovalRequest__c/fields/TransportationCost_t__c.field-meta.xml
<CustomField>
    <fullName>TransportationCost_t__c</fullName>
    <formula>TransportationCost__c /  Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transp. Cost / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>