force-app/main/default/objects/PriceApprovalRequest__c/fields/Turnover__c.field-meta.xml
<CustomField>
    <fullName>Turnover__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the turnover calculated</description>
    <inlineHelpText>Is the turnover calculated</inlineHelpText>
    <label>Turnover</label>
    <type>Checkbox</type>
</CustomField>