force-app/main/default/objects/PriceApprovalRequest__c/listViews/All_Price_Approval_Requests.listView-meta.xml
<ListView>
    <fullName>All_Price_Approval_Requests</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Stage__c</columns>
    <columns>StageERP__c</columns>
    <columns>Quantity_t__c</columns>
    <columns>Margin__c</columns>
    <columns>Margin_t__c</columns>
    <columns>SalesRep__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>BOSpecialist__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Price Approval Requests</label>
    <sharedTo>
        <role>CEO</role>
        <role>CMO</role>
        <role>Head_of_Pipe_Division</role>
        <role>MarketingSpecialist</role>
        <role>PRM_Director</role>
    </sharedTo>
</ListView>