force-app/main/default/objects/PriceApprovalRequest__c/listViews/America_Price_Approval_Requests.listView-meta.xml
<ListView>
    <fullName>America_Price_Approval_Requests</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Stage__c</columns>
    <columns>StageERP__c</columns>
    <columns>Quantity_t__c</columns>
    <columns>Price_t__c</columns>
    <columns>Margin__c</columns>
    <columns>Margin_t__c</columns>
    <columns>SalesRep__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>BOSpecialist__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MarketSegment__c</field>
        <operation>equals</operation>
        <value>00001</value>
    </filters>
    <label>America Price Approval Requests</label>
    <sharedTo>
        <role>CSO_Americas</role>
        <role>SeniorSM_Americas</role>
    </sharedTo>
</ListView>